--- a/chauffage.html
+++ b/chauffage.html
@@ -64,12 +64,13 @@
                             <nav id="site-navigation" class="main-navigation">
                                 <ul class="menu">
                                     <li><a href="index.html" class="transition-link">Accueil</a></li>
-                                    <li><a href="magasin.html" class="transition-link">Magasin</a></li>
                                     <li><a href="plomberie.html" class="transition-link">Plomberie</a></li>
-                                    <li><a href="climatisation.html" class="transition-link">Climatisation</a></li>
                                     <li class="current-menu-item"><a href="chauffage.html"
                                             class="transition-link">Chauffage</a></li>
-                                    <li><a href="contact.html" class="transition-link">Contact</a></li>
+                                    <li><a href="climatisation.html" class="transition-link">Climatisation</a></li>
+                                    <li><a href="contact.html" class="transition-link">Demande de devis</a></li>
+                                    <li><a href="contact.html" class="transition-link"
+                                            style="color:#FFD700; font-weight:bold;">Dépannage urgent</a></li>
                                 </ul>
                             </nav>
                         </div>
