--- a/index.html
+++ b/index.html
@@ -205,11 +205,12 @@
                                 <ul class="menu">
                                     <li class="current-menu-item"><a href="index.html"
                                             class="transition-link">Accueil</a></li>
-                                    <li><a href="magasin.html" class="transition-link">Magasin</a></li>
                                     <li><a href="plomberie.html" class="transition-link">Plomberie</a></li>
-                                    <li><a href="climatisation.html" class="transition-link">Climatisation</a></li>
                                     <li><a href="chauffage.html" class="transition-link">Chauffage</a></li>
-                                    <li><a href="contact.html" class="transition-link">Contact</a></li>
+                                    <li><a href="climatisation.html" class="transition-link">Climatisation</a></li>
+                                    <li><a href="contact.html" class="transition-link">Demande de devis</a></li>
+                                    <li><a href="contact.html" class="transition-link"
+                                            style="color:#FFD700; font-weight:bold;">Dépannage urgent</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -308,7 +309,8 @@
                                 style="color:#0f6a36; font-weight:800; text-transform:uppercase; letter-spacing:2px;">[
                                 Depuis 1989 ]</span>
                             <h2 class="section-title mb-4" style="font-size:3rem; line-height:1.2;">Expertise & Qualité
-                                <br>Professionnelle</h2>
+                                <br>Professionnelle
+                            </h2>
                             <p class="lead text-dark mb-4">
                                 Spécialisée en plomberie, chauffage et climatisation, STINC intervient pour tous vos
                                 travaux d’installation, de dépannage et de maintenance.
