--- a/depannage.html
+++ b/depannage.html
@@ -67,10 +67,9 @@
                                     <li><a href="plomberie.html" class="transition-link">Plomberie</a></li>
                                     <li><a href="chauffage.html" class="transition-link">Chauffage</a></li>
                                     <li><a href="climatisation.html" class="transition-link">Climatisation</a></li>
-                                    <li class="current-menu-item"><a href="devis.html" class="transition-link">Demande
-                                            de devis</a></li>
-                                    <li><a href="depannage.html" class="transition-link nav-btn-urgent">Dépannage
-                                            urgent</a></li>
+                                    <li><a href="devis.html" class="transition-link">Demande de devis</a></li>
+                                    <li class="current-menu-item"><a href="depannage.html"
+                                            class="transition-link nav-btn-urgent">Dépannage urgent</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -99,46 +98,51 @@
 
         <section class="section pt-5 pb-5">
             <div class="container">
-                <div class="row g-5">
-                    <div class="col-lg-6 bg-light p-5 rounded">
-                        <h2 class="mb-4">Formulaire de Contact</h2>
-                        <form style="display:flex; flex-direction:column; gap:15px;">
-                            <input type="text" placeholder="Nom Complet" class="form-control p-3">
-                            <input type="email" placeholder="Email" class="form-control p-3">
-                            <input type="tel" placeholder="Téléphone" class="form-control p-3">
-                            <select class="form-select p-3">
-                                <option>Type de demande</option>
-                                <option>Devis Gratuit</option>
-                                <option>Dépannage Urgent</option>
-                                <option>Entretien</option>
-                                <option>Autre</option>
-                            </select>
-                            <textarea placeholder="Votre message..." class="form-control p-3"
-                                style="height:150px;"></textarea>
-                            <button class="btn btn-primary w-100">ENVOYER</button>
-                        </form>
-                    </div>
-
-                    <div class="col-lg-6">
-                        <h2 class="text-danger mb-4">URGENCE 24/7</h2>
-                        <p class="mb-4 lead">Pour toute urgence (fuite d'eau, panne de chauffage), contactez-nous
-                            immédiatement par téléphone.</p>
-
-                        <div class="bg-dark text-white p-4 text-center rounded border border-warning mb-5">
-                            <i class="fas fa-phone-alt mb-3 text-warning" style="font-size:40px;"></i>
-                            <div class="fw-bold fs-2" style="font-family:'Oswald', sans-serif;">02 32 28 41 69</div>
-                            <div class="text-warning mt-2">Ligne Directe Technicien</div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-10">
+                        <div class="text-center mb-5">
+                            <h2 class="mb-2 text-danger" style="font-size:3em;">URGENCE 24H/24 & 7J/7</h2>
+                            <p class="lead fw-bold">Intervention rapide en moins de 30 minutes sur Evreux et alentours.
+                            </p>
                         </div>
 
-                        <div>
-                            <h3>Coordonnées</h3>
-                            <ul class="list-unstyled mt-3">
-                                <li class="mb-3 d-flex align-items-center"><i
-                                        class="fas fa-map-marker-alt text-warning me-3 fs-4"></i> 123 rue de
-                                    l'Industrie, 27000 Evreux</li>
-                                <li class="d-flex align-items-center"><i
-                                        class="fas fa-envelope text-warning me-3 fs-4"></i> contact@stinc.fr</li>
-                            </ul>
+                        <div class="row g-4 mb-5">
+                            <div class="col-md-6">
+                                <div
+                                    class="bg-dark text-white p-5 text-center rounded border border-danger shadow-lg h-100 d-flex flex-col justify-content-center align-items-center">
+                                    <i class="fas fa-phone-volume mb-4 text-danger"
+                                        style="font-size:60px; animation: pulse-urgent 1.5s infinite;"></i>
+                                    <h3 class="text-white">APPELEZ-NOUS MAINTENANT</h3>
+                                    <div class="fw-bold fs-1 text-warning mt-3"
+                                        style="font-family:'Oswald', sans-serif;">02 32 28 41 69</div>
+                                    <a href="tel:0232284169" class="btn btn-danger btn-lg mt-4 w-100 fw-bold">APPELER LE
+                                        TECHNICIEN</a>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="bg-light p-5 rounded h-100 border">
+                                    <h3 class="mb-4">Nos Tarifs Dépannage</h3>
+                                    <ul class="list-unstyled lead">
+                                        <li class="mb-3 d-flex justify-content-between border-bottom pb-2">
+                                            <span><i class="fas fa-check text-success me-2"></i> Déplacement</span>
+                                            <span class="fw-bold">50€ TTC</span>
+                                        </li>
+                                        <li class="mb-3 d-flex justify-content-between border-bottom pb-2">
+                                            <span><i class="fas fa-check text-success me-2"></i> Main d'oeuvre
+                                                (1h)</span>
+                                            <span class="fw-bold">60€ TTC</span>
+                                        </li>
+                                        <li class="mb-3 d-flex justify-content-between border-bottom pb-2">
+                                            <span><i class="fas fa-check text-success me-2"></i> Recherche de
+                                                fuite</span>
+                                            <span class="fw-bold">Forfait 120€</span>
+                                        </li>
+                                        <li class="mb-3 text-muted fst-italic fs-6">
+                                            *Majoration de 50% les soirs et week-ends.
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
