--- a/devis.html
+++ b/devis.html
@@ -99,47 +99,36 @@
 
         <section class="section pt-5 pb-5">
             <div class="container">
-                <div class="row g-5">
-                    <div class="col-lg-6 bg-light p-5 rounded">
-                        <h2 class="mb-4">Formulaire de Contact</h2>
-                        <form style="display:flex; flex-direction:column; gap:15px;">
-                            <input type="text" placeholder="Nom Complet" class="form-control p-3">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 bg-light p-5 rounded shadow-lg">
+                        <div class="text-center mb-5">
+                            <h2 class="mb-3">Demandez votre Devis Gratuit</h2>
+                            <p class="lead text-muted">Remplissez le formulaire ci-dessous et nous vous répondrons sous
+                                24h.</p>
+                        </div>
+                        <form style="display:flex; flex-direction:column; gap:20px;">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <input type="text" placeholder="Nom Complet" class="form-control p-3">
+                                </div>
+                                <div class="col-md-6">
+                                    <input type="tel" placeholder="Téléphone" class="form-control p-3">
+                                </div>
+                            </div>
                             <input type="email" placeholder="Email" class="form-control p-3">
-                            <input type="tel" placeholder="Téléphone" class="form-control p-3">
+                            <input type="text" placeholder="Adresse d'intervention" class="form-control p-3">
                             <select class="form-select p-3">
-                                <option>Type de demande</option>
-                                <option>Devis Gratuit</option>
-                                <option>Dépannage Urgent</option>
-                                <option>Entretien</option>
+                                <option>Type de travaux</option>
+                                <option>Installation Plomberie</option>
+                                <option>Remplacement Chaudière</option>
+                                <option>Installation Climatisation</option>
+                                <option>Rénovation Salle de Bain</option>
                                 <option>Autre</option>
                             </select>
-                            <textarea placeholder="Votre message..." class="form-control p-3"
+                            <textarea placeholder="Description de votre projet..." class="form-control p-3"
                                 style="height:150px;"></textarea>
-                            <button class="btn btn-primary w-100">ENVOYER</button>
+                            <button class="btn btn-primary w-100 fs-5 py-3">OBTENIR MON DEVIS</button>
                         </form>
-                    </div>
-
-                    <div class="col-lg-6">
-                        <h2 class="text-danger mb-4">URGENCE 24/7</h2>
-                        <p class="mb-4 lead">Pour toute urgence (fuite d'eau, panne de chauffage), contactez-nous
-                            immédiatement par téléphone.</p>
-
-                        <div class="bg-dark text-white p-4 text-center rounded border border-warning mb-5">
-                            <i class="fas fa-phone-alt mb-3 text-warning" style="font-size:40px;"></i>
-                            <div class="fw-bold fs-2" style="font-family:'Oswald', sans-serif;">02 32 28 41 69</div>
-                            <div class="text-warning mt-2">Ligne Directe Technicien</div>
-                        </div>
-
-                        <div>
-                            <h3>Coordonnées</h3>
-                            <ul class="list-unstyled mt-3">
-                                <li class="mb-3 d-flex align-items-center"><i
-                                        class="fas fa-map-marker-alt text-warning me-3 fs-4"></i> 123 rue de
-                                    l'Industrie, 27000 Evreux</li>
-                                <li class="d-flex align-items-center"><i
-                                        class="fas fa-envelope text-warning me-3 fs-4"></i> contact@stinc.fr</li>
-                            </ul>
-                        </div>
                     </div>
                 </div>
             </div>
