--- a/plomberie.html
+++ b/plomberie.html
@@ -74,9 +74,9 @@
                                             class="transition-link">Plomberie</a></li>
                                     <li><a href="chauffage.html" class="transition-link">Chauffage</a></li>
                                     <li><a href="climatisation.html" class="transition-link">Climatisation</a></li>
-                                    <li><a href="contact.html" class="transition-link">Demande de devis</a></li>
-                                    <li><a href="contact.html" class="transition-link"
-                                            style="color:#FFD700; font-weight:bold;">Dépannage urgent</a></li>
+                                    <li><a href="devis.html" class="transition-link">Demande de devis</a></li>
+                                    <li><a href="depannage.html" class="transition-link nav-btn-urgent">Dépannage
+                                            urgent</a></li>
                                 </ul>
                             </nav>
                         </div>
