--- a/plomberie.html
+++ b/plomberie.html
@@ -61,8 +61,8 @@
                         <div class="octf-col">
                             <div id="site-logo" class="site-logo">
                                 <a href="index.html" class="stinc-logo transition-link">
-                                    <span class="logo-text">STINC</span>
-                                    <span class="logo-sub">PROFESSIONNELS</span>
+                                    <span class="logo-text">SmartPlomb Clim</span>
+                                    <span class="logo-sub">URGENCE DÉPANNAGE • PLOMBERIE • CHAUFFAGE</span>
                                 </a>
                             </div>
                         </div>
