--- a/contact.html
+++ b/contact.html
@@ -57,8 +57,9 @@
                     <div class="octf-mainbar-row octf-row">
                         <div class="octf-col">
                             <div id="site-logo" class="site-logo"><a href="index.html"
-                                    class="stinc-logo transition-link"><span class="logo-text">STINC</span><span
-                                        class="logo-sub">PROFESSIONNELS</span></a></div>
+                                    class="stinc-logo transition-link"><span class="logo-text">SmartPlomb
+                                        Clim</span><span class="logo-sub">URGENCE DÉPANNAGE • PLOMBERIE •
+                                        CHAUFFAGE</span></a></div>
                         </div>
                         <div class="octf-col menu-col d-none d-lg-block">
                             <nav id="site-navigation" class="main-navigation">
