--- a/climatisation.html
+++ b/climatisation.html
@@ -41,8 +41,8 @@
                         </div>
                         <div class="col-md-8">
                             <ul class="topbar-info d-flex mb-0 justify-content-end clearfix list-unstyled">
-                                <li class="me-4"><i class="fas fa-map-marker-alt me-2"></i>423 rue de Cocherel, 27100
-                                    Evreux</li>
+                                <li class="me-4"><i class="fas fa-map-marker-alt me-2"></i>423 rue de Cocherel, 27000
+                                    Evreux, France</li>
                                 <li class="me-4"><a href="mailto:contact@stinc.fr"><i
                                             class="fas fa-envelope me-2"></i>contact@stinc.fr</a></li>
                                 <li><a href="tel:0232284169"><i class="fas fa-phone-alt me-2"></i>02 32 28 41 69</a>
@@ -132,9 +132,10 @@
                         <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 mb-4">
                             <div class="widget-footer">
                                 <div class="site-logo mb-3"><span class="logo-text"
-                                        style="color:white; font-size:24px; font-weight:bold;">S.T.I.N.C</span></div>
-                                <p class="footer-desc">Stinc, spécialiste dans le domaine de la plomberie, chauffage,
-                                    ventilation et climatisation.</p>
+                                        style="color:white; font-size:24px; font-weight:bold;">SmartPlomb Clim</span>
+                                </div>
+                                <p class="footer-desc">Spécialiste en plomberie, chauffage et climatisation. Service
+                                    d'urgence 24h/24 et 7j/7.</p>
                                 <div class="footer-socials"><a href="#"><i class="fab fa-facebook-f"></i></a><a
                                         href="#"><i class="fab fa-linkedin-in"></i></a><a href="#"><i
                                             class="fab fa-instagram"></i></a></div>
@@ -145,7 +146,7 @@
                                 <h6>Contactez-nous</h6>
                                 <ul class="footer-list list-unstyled">
                                     <li class="mb-2"><i class="fas fa-map-marker-alt me-2"></i>423 rue de Cocherel,
-                                        27100 Evreux</li>
+                                        27000 Evreux, France</li>
                                     <li class="mb-2"><a href="mailto:contact@stinc.fr"><i
                                                 class="fas fa-envelope me-2"></i>contact@stinc.fr</a></li>
                                     <li><a href="tel:0232284169"><i class="fas fa-phone-alt me-2"></i>02 32 28 41 69</a>
