--- a/depannage.html
+++ b/depannage.html
@@ -5,7 +5,29 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>SoudurePro & Plomberie | Contact</title>
+
+    <!-- SEO Meta Tags -->
+    <title>Urgence Plomberie Évreux 24/7 | Dépannage Rapide | SmartPlomb Clim</title>
+    <meta name="description"
+        content="Besoin d'un plombier en urgence à Évreux ? Intervention en 30 min 24h/24 et 7j/7. Fuite d'eau, chaudière en panne, débouchage. Appelez le 02 32 28 41 69." />
+    <meta name="keywords"
+        content="urgence plombier évreux, dépannage 24/7, sos plomberie, fuite d'eau nuit, week-end, 27000, smartplomb clim, france" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Geo & OG Tags -->
+    <meta name="geo.region" content="FR-27" />
+    <meta name="geo.placename" content="Évreux" />
+    <meta name="geo.position" content="49.0241;1.1508" />
+    <meta name="ICBM" content="49.0241, 1.1508" />
+
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="URGENCE Plomberie 24/7 à Évreux" />
+    <meta property="og:description"
+        content="Intervention en 30 min pour toute urgence plomberie et chauffage. Disponible 24h/24." />
+    <meta property="og:url" content="https://stinc.fr/depannage.html" />
+    <meta property="og:image"
+        content="https://lh3.googleusercontent.com/p/AF1QipPGe6f93jH6zbcN1VDluaLZW35lkc_IvmLKcKSS=s1360-w1360-h1020-rw" />
+
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome CDN -->
@@ -41,8 +63,8 @@
                         </div>
                         <div class="col-md-8">
                             <ul class="topbar-info d-flex mb-0 justify-content-end clearfix list-unstyled">
-                                <li class="me-4"><i class="fas fa-map-marker-alt me-2"></i>423 rue de Cocherel, 27100
-                                    Evreux</li>
+                                <li class="me-4"><i class="fas fa-map-marker-alt me-2"></i>423 rue de Cocherel, 27000
+                                    Evreux, France</li>
                                 <li class="me-4"><a href="mailto:contact@stinc.fr"><i
                                             class="fas fa-envelope me-2"></i>contact@stinc.fr</a></li>
                                 <li><a href="tel:0232284169"><i class="fas fa-phone-alt me-2"></i>02 32 28 41 69</a>
@@ -103,7 +125,8 @@
                     <div class="col-lg-10">
                         <div class="text-center mb-5">
                             <h2 class="mb-2 text-danger" style="font-size:3em;">URGENCE 24H/24 & 7J/7</h2>
-                            <p class="lead fw-bold">Intervention rapide en moins de 30 minutes sur Evreux et alentours.
+                            <p class="lead fw-bold">Intervention rapide en moins de 30 minutes sur Evreux (27000) et
+                                alentours.
                             </p>
                         </div>
 
@@ -157,9 +180,10 @@
                         <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 mb-4">
                             <div class="widget-footer">
                                 <div class="site-logo mb-3"><span class="logo-text"
-                                        style="color:white; font-size:24px; font-weight:bold;">S.T.I.N.C</span></div>
-                                <p class="footer-desc">Stinc, spécialiste dans le domaine de la plomberie, chauffage,
-                                    ventilation et climatisation.</p>
+                                        style="color:white; font-size:24px; font-weight:bold;">SmartPlomb Clim</span>
+                                </div>
+                                <p class="footer-desc">Spécialiste en plomberie, chauffage et climatisation. Service
+                                    d'urgence 24h/24 et 7j/7.</p>
                                 <div class="footer-socials"><a href="#"><i class="fab fa-facebook-f"></i></a><a
                                         href="#"><i class="fab fa-linkedin-in"></i></a><a href="#"><i
                                             class="fab fa-instagram"></i></a></div>
@@ -170,7 +194,7 @@
                                 <h6>Contactez-nous</h6>
                                 <ul class="footer-list list-unstyled">
                                     <li class="mb-2"><i class="fas fa-map-marker-alt me-2"></i>423 rue de Cocherel,
-                                        27100 Evreux</li>
+                                        27000 Evreux, France</li>
                                     <li class="mb-2"><a href="mailto:contact@stinc.fr"><i
                                                 class="fas fa-envelope me-2"></i>contact@stinc.fr</a></li>
                                     <li><a href="tel:0232284169"><i class="fas fa-phone-alt me-2"></i>02 32 28 41 69</a>
