--- a/index.html
+++ b/index.html
@@ -6,16 +6,87 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-    <title>SoudurePro & Plomberie | Accueil</title>
+    <!-- SEO Meta Tags -->
+    <title>Plombier Chauffagiste Évreux | SmartPlomb Clim - France & Maroc</title>
+    <meta name="description"
+        content="SmartPlomb Clim : Expert en plomberie, chauffage et climatisation à Évreux (27000). Urgence 24/7. Installation et dépannage en France. Services adaptés pour projets au Maroc." />
+    <meta name="keywords"
+        content="plombier évreux, chauffagiste 27000, dépannage plomberie, climatisation évreux, urgence plomberie 24/7, smartplomb clim, installation sanitaire, rge, france, maroc" />
+    <meta name="author" content="SmartPlomb Clim" />
+    <meta name="robots" content="index, follow" />
 
-    <!-- Bootstrap CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- FontAwesome CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&family=Oswald:wght@500;700&display=swap"
-        rel="stylesheet">
+    <!-- Geo Tags (Evreux, France) -->
+    <meta name="geo.region" content="FR-27" />
+    <meta name="geo.placename" content="Évreux" />
+    <meta name="geo.position" content="49.0241;1.1508" />
+    <meta name="ICBM" content="49.0241, 1.1508" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="business.business" />
+    <meta property="og:title" content="SmartPlomb Clim - Plomberie & Chauffage Évreux" />
+    <meta property="og:description"
+        content="Intervention rapide 24/7 pour plomberie, chauffage et climatisation. Particuliers et Pros. France & Maroc." />
+    <meta property="og:url" content="https://stinc.fr/" />
+    <meta property="og:image"
+        content="https://lh3.googleusercontent.com/p/AF1QipPGe6f93jH6zbcN1VDluaLZW35lkc_IvmLKcKSS=s1360-w1360-h1020-rw" />
+    <meta property="og:site_name" content="SmartPlomb Clim" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="SmartPlomb Clim - Urgence Plomberie" />
+    <meta name="twitter:description"
+        content="Expertise plomberie, chauffage, climatisation. Service 24/7 Évreux et environs." />
+    <meta name="twitter:image"
+        content="https://lh3.googleusercontent.com/p/AF1QipPGe6f93jH6zbcN1VDluaLZW35lkc_IvmLKcKSS=s1360-w1360-h1020-rw" />
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "PlumbingService",
+      "name": "SmartPlomb Clim",
+      "image": "https://lh3.googleusercontent.com/p/AF1QipPGe6f93jH6zbcN1VDluaLZW35lkc_IvmLKcKSS=s1360-w1360-h1020-rw",
+      "@id": "https://stinc.fr",
+      "url": "https://stinc.fr",
+      "telephone": "+33232284169",
+      "priceRange": "€€",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "423 rue de Cocherel",
+        "addressLocality": "Evreux",
+        "postalCode": "27000",
+        "addressCountry": "FR"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 49.0241,
+        "longitude": 1.1508
+      },
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Monday",
+            "Tuesday",
+            "Wednesday",
+            "Thursday"
+          ],
+          "opens": "08:00",
+          "closes": "18:00"
+        },
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": "Friday",
+          "opens": "08:00",
+          "closes": "12:00"
+        }
+      ],
+      "sameAs": [
+        "https://www.facebook.com/stinc",
+        "https://www.instagram.com/stinc"
+      ]
+    }
+    </script>
 
     <link rel="stylesheet" href="style.css" />
     <style>
@@ -176,8 +247,8 @@
                         </div>
                         <div class="col-md-8">
                             <ul class="topbar-info d-flex mb-0 justify-content-end clearfix list-unstyled">
-                                <li class="me-4"><i class="fas fa-map-marker-alt me-2"></i>423 rue de Cocherel, 27100
-                                    Evreux</li>
+                                <li class="me-4"><i class="fas fa-map-marker-alt me-2"></i>423 rue de Cocherel, 27000
+                                    Evreux, France</li>
                                 <li class="me-4"><a href="mailto:contact@stinc.fr"><i
                                             class="fas fa-envelope me-2"></i>contact@stinc.fr</a></li>
                                 <li><a href="tel:0232284169"><i class="fas fa-phone-alt me-2"></i>02 32 28 41 69</a>
@@ -307,42 +378,45 @@
                         <div class="col-lg-6 ps-lg-5">
                             <span class="sub-heading d-block mb-2"
                                 style="color:#0f6a36; font-weight:800; text-transform:uppercase; letter-spacing:2px;">[
-                                Depuis 1989 ]</span>
-                            <h2 class="section-title mb-4" style="font-size:3rem; line-height:1.2;">Expertise & Qualité
-                                <br>Professionnelle
-                            </h2>
+                                SmartPlomb Clim ]</span>
+                            <h2 class="section-title mb-4" style="font-size:3rem; line-height:1.2;">Votre
+                                Expert<br>Plomberie & CVC</h2>
+
                             <p class="lead text-dark mb-4">
-                                Spécialisée en plomberie, chauffage et climatisation, STINC intervient pour tous vos
-                                travaux d’installation, de dépannage et de maintenance.
-                            </p>
-                            <p class="text-secondary mb-5">
-                                Sous la direction de Bruno LEPIOUFFE, notre magasin et nos équipes techniques vous
-                                apportent des solutions concrètes. Que vous soyez un professionnel ou un particulier,
-                                nous mettons notre savoir-faire au service de votre confort thermique et sanitaire.
+                                <strong>SmartPlomb Clim</strong>, société spécialisée en plomberie, chauffage et
+                                climatisation, intervient pour tous vos travaux d’installation, de dépannage et de
+                                maintenance, auprès des particuliers comme des professionnels.
                             </p>
 
-                            <div class="row mb-5">
-                                <div class="col-6">
-                                    <div class="d-flex align-items-center mb-3">
-                                        <i class="fas fa-check-circle text-warning fs-4 me-3"></i>
-                                        <span class="fw-bold">Intervention Rapide</span>
-                                    </div>
-                                    <div class="d-flex align-items-center">
-                                        <i class="fas fa-check-circle text-warning fs-4 me-3"></i>
-                                        <span class="fw-bold">Certifié RGE</span>
-                                    </div>
-                                </div>
-                                <div class="col-6">
-                                    <div class="d-flex align-items-center mb-3">
-                                        <i class="fas fa-check-circle text-warning fs-4 me-3"></i>
-                                        <span class="fw-bold">Devis Gratuit</span>
-                                    </div>
-                                    <div class="d-flex align-items-center">
-                                        <i class="fas fa-check-circle text-warning fs-4 me-3"></i>
-                                        <span class="fw-bold">SAV Réactif</span>
-                                    </div>
-                                </div>
+                            <p class="text-secondary mb-4">
+                                Nous assurons un <strong>service d’urgence 24h/24 et 7j/7</strong>, avec des
+                                interventions rapides et efficaces pour tous types de pannes :
+                            </p>
+
+                            <ul class="list-unstyled mb-4 text-secondary">
+                                <li class="mb-2"><i class="fas fa-check text-warning me-2"></i> Dépannage plomberie
+                                    (fuites, canalisations, sanitaires…)</li>
+                                <li class="mb-2"><i class="fas fa-check text-warning me-2"></i> Dépannage chauffage
+                                    (chaudières, radiateurs)</li>
+                                <li class="mb-2"><i class="fas fa-check text-warning me-2"></i> Dépannage climatisation
+                                    & Ventilation</li>
+                                <li class="mb-2"><i class="fas fa-check text-warning me-2"></i> Maintenance préventive
+                                    et contrats d’entretien</li>
+                                <li class="mb-2"><i class="fas fa-check text-warning me-2"></i> Installation et
+                                    rénovation complète</li>
+                            </ul>
+
+                            <div class="p-3 mb-4" style="background-color: #f8f9fa; border-left: 4px solid #FFD700;">
+                                <p class="mb-0 text-dark">
+                                    <i class="fas fa-handshake me-2" style="color:#0f6a36;"></i>
+                                    Nous collaborons en partenariat avec <strong>Basic-Fit</strong>, garantissant un
+                                    service fiable et adapté aux environnements professionnels exigeants.
+                                </p>
                             </div>
+
+                            <p class="fw-bold text-dark mb-5">
+                                Notre priorité : réactivité, qualité de service et satisfaction client.
+                            </p>
 
                             <a href="contact.html" class="btn btn-dark rounded-0 px-4 py-3 transition-link"
                                 style="background:#1a1a1a; letter-spacing:1px;">NOUS CONTACTER</a>
@@ -382,10 +456,10 @@
                             <div class="widget-footer">
                                 <div class="site-logo mb-3">
                                     <span class="logo-text"
-                                        style="color:white; font-size:24px; font-weight:bold;">S.T.I.N.C</span>
+                                        style="color:white; font-size:24px; font-weight:bold;">SmartPlomb Clim</span>
                                 </div>
-                                <p class="footer-desc">Stinc, spécialiste dans le domaine de la plomberie, chauffage,
-                                    ventilation et climatisation.</p>
+                                <p class="footer-desc">Spécialiste en plomberie, chauffage et climatisation. Service
+                                    d'urgence 24h/24 et 7j/7.</p>
                                 <div class="footer-socials">
                                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                                     <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -398,7 +472,7 @@
                                 <h6>Contactez-nous</h6>
                                 <ul class="footer-list list-unstyled">
                                     <li class="mb-2"><i class="fas fa-map-marker-alt me-2"></i>423 rue de Cocherel,
-                                        27100 Evreux</li>
+                                        27000 Evreux, France</li>
                                     <li class="mb-2"><a href="mailto:contact@stinc.fr"><i
                                                 class="fas fa-envelope me-2"></i>contact@stinc.fr</a></li>
                                     <li><a href="tel:0232284169"><i class="fas fa-phone-alt me-2"></i>02 32 28 41 69</a>
