--- a/chauffage.html
+++ b/chauffage.html
@@ -5,7 +5,27 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>SoudurePro & Plomberie | Chauffage</title>
+    <!-- SEO Meta Tags -->
+    <title>Chauffagiste Évreux | Entretien & Installation Chaudière | SmartPlomb Clim</title>
+    <meta name="description"
+        content="Expert chauffagiste à Évreux (27000). Installation chaudière, radiateurs, entretien annuel. Solutions économie d'énergie. Intervention rapide." />
+    <meta name="keywords"
+        content="chauffagiste évreux, entretien chaudière, installation chauffage, radiateur, 27000, smartplomb clim, france" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Geo & OG Tags -->
+    <meta name="geo.region" content="FR-27" />
+    <meta name="geo.placename" content="Évreux" />
+    <meta name="geo.position" content="49.0241;1.1508" />
+    <meta name="ICBM" content="49.0241, 1.1508" />
+
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Chauffagiste Évreux - SmartPlomb Clim" />
+    <meta property="og:description" content="Solutions de chauffage performantes et entretien chaudière à Évreux." />
+    <meta property="og:url" content="https://urgence-depannage-plomberie-ch.me/chauffage.html" />
+    <meta property="og:image"
+        content="https://lh3.googleusercontent.com/p/AF1QipPGe6f93jH6zbcN1VDluaLZW35lkc_IvmLKcKSS=s1360-w1360-h1020-rw" />
+
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome CDN -->
