--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,28 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>SoudurePro & Plomberie | Contact</title>
+    <!-- SEO Meta Tags -->
+    <title>Contact Plombier Évreux | Devis Gratuit | SmartPlomb Clim</title>
+    <meta name="description"
+        content="Contactez SmartPlomb Clim à Évreux (27000). Demandez votre devis gratuit pour plomberie, chauffage ou climatisation. Réponse rapide. 02 32 28 41 69." />
+    <meta name="keywords"
+        content="contact plombier évreux, devis gratuit, adresse smartplomb clim, téléphone plombier 27000, france, maroc" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Geo & OG Tags -->
+    <meta name="geo.region" content="FR-27" />
+    <meta name="geo.placename" content="Évreux" />
+    <meta name="geo.position" content="49.0241;1.1508" />
+    <meta name="ICBM" content="49.0241, 1.1508" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Contactez SmartPlomb Clim - Évreux" />
+    <meta property="og:description"
+        content="Une question ? Un projet ? Contactez-nous pour un devis gratuit ou une intervention." />
+    <meta property="og:url" content="https://urgence-depannage-plomberie-ch.me/contact.html" />
+    <meta property="og:image"
+        content="https://lh3.googleusercontent.com/p/AF1QipPGe6f93jH6zbcN1VDluaLZW35lkc_IvmLKcKSS=s1360-w1360-h1020-rw" />
+
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome CDN -->
