--- a/depannage.html
+++ b/depannage.html
@@ -24,7 +24,7 @@
     <meta property="og:title" content="URGENCE Plomberie 24/7 à Évreux" />
     <meta property="og:description"
         content="Intervention en 30 min pour toute urgence plomberie et chauffage. Disponible 24h/24." />
-    <meta property="og:url" content="https://stinc.fr/depannage.html" />
+    <meta property="og:url" content="https://urgence-depannage-plomberie-ch.me/depannage.html" />
     <meta property="og:image"
         content="https://lh3.googleusercontent.com/p/AF1QipPGe6f93jH6zbcN1VDluaLZW35lkc_IvmLKcKSS=s1360-w1360-h1020-rw" />
 
