--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta property="og:title" content="SmartPlomb Clim - Plomberie & Chauffage Évreux" />
     <meta property="og:description"
         content="Intervention rapide 24/7 pour plomberie, chauffage et climatisation. Particuliers et Pros. France & Maroc." />
-    <meta property="og:url" content="https://stinc.fr/" />
+    <meta property="og:url" content="https://urgence-depannage-plomberie-ch.me/" />
     <meta property="og:image"
         content="https://lh3.googleusercontent.com/p/AF1QipPGe6f93jH6zbcN1VDluaLZW35lkc_IvmLKcKSS=s1360-w1360-h1020-rw" />
     <meta property="og:site_name" content="SmartPlomb Clim" />
@@ -46,8 +46,8 @@
       "@type": "PlumbingService",
       "name": "SmartPlomb Clim",
       "image": "https://lh3.googleusercontent.com/p/AF1QipPGe6f93jH6zbcN1VDluaLZW35lkc_IvmLKcKSS=s1360-w1360-h1020-rw",
-      "@id": "https://stinc.fr",
-      "url": "https://stinc.fr",
+      "@id": "https://urgence-depannage-plomberie-ch.me",
+      "url": "https://urgence-depannage-plomberie-ch.me",
       "telephone": "+33232284169",
       "priceRange": "€€",
       "address": {
