--- a/plomberie.html
+++ b/plomberie.html
@@ -6,7 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-    <title>SoudurePro & Plomberie | Services Plomberie</title>
+    <!-- SEO Meta Tags -->
+    <title>Plomberie Évreux | Dépannage & Installation | SmartPlomb Clim</title>
+    <meta name="description"
+        content="Service de plomberie complet à Évreux (27000). Recherche de fuite, débouchage, installation sanitaire. Intervention 24/7. Devis gratuit." />
+    <meta name="keywords"
+        content="plombier évreux, fuite d'eau, débouchage canalisation, salle de bain, urgence plomberie, smartplomb clim, 27000, france" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Geo & OG Tags -->
+    <meta name="geo.region" content="FR-27" />
+    <meta name="geo.placename" content="Évreux" />
+    <meta name="geo.position" content="49.0241;1.1508" />
+    <meta name="ICBM" content="49.0241, 1.1508" />
+
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Plomberie Évreux - Services Pro" />
+    <meta property="og:description"
+        content="Dépannage et installation plomberie à Évreux. Équipe qualifiée disponible 24/7." />
+    <meta property="og:url" content="https://urgence-depannage-plomberie-ch.me/plomberie.html" />
+    <meta property="og:image"
+        content="https://lh3.googleusercontent.com/p/AF1QipPGe6f93jH6zbcN1VDluaLZW35lkc_IvmLKcKSS=s1360-w1360-h1020-rw" />
+
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome CDN -->
