--- a/climatisation.html
+++ b/climatisation.html
@@ -5,7 +5,28 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>SoudurePro & Plomberie | Climatisation</title>
+    <!-- SEO Meta Tags -->
+    <title>Climatisation Évreux | Installation & Entretien PAC | SmartPlomb Clim</title>
+    <meta name="description"
+        content="Spécialiste climatisation et pompe à chaleur à Évreux (27000). Installation, maintenance et dépannage clim réversible. Devis gratuit." />
+    <meta name="keywords"
+        content="climatisation évreux, pompe à chaleur, clim réversible, installateur clim 27, smartplomb clim, france" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Geo & OG Tags -->
+    <meta name="geo.region" content="FR-27" />
+    <meta name="geo.placename" content="Évreux" />
+    <meta name="geo.position" content="49.0241;1.1508" />
+    <meta name="ICBM" content="49.0241, 1.1508" />
+
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Climatisation & PAC Évreux" />
+    <meta property="og:description"
+        content="Installation et maintenance de climatisation et pompes à chaleur à Évreux." />
+    <meta property="og:url" content="https://urgence-depannage-plomberie-ch.me/climatisation.html" />
+    <meta property="og:image"
+        content="https://lh3.googleusercontent.com/p/AF1QipPGe6f93jH6zbcN1VDluaLZW35lkc_IvmLKcKSS=s1360-w1360-h1020-rw" />
+
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome CDN -->
