--- a/devis.html
+++ b/devis.html
@@ -5,7 +5,28 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>SoudurePro & Plomberie | Contact</title>
+    <!-- SEO Meta Tags -->
+    <title>Demande de Devis Plomberie & Chauffage | SmartPlomb Clim</title>
+    <meta name="description"
+        content="Estimez le coût de vos travaux. Devis gratuit et sans engagement pour plomberie, chauffage, climatisation sur Évreux (27000) et environs." />
+    <meta name="keywords"
+        content="devis plombier, prix installation chaudière, tarif dépannage, coût climatisation, évreux, smartplomb clim, france, maroc" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Geo & OG Tags -->
+    <meta name="geo.region" content="FR-27" />
+    <meta name="geo.placename" content="Évreux" />
+    <meta name="geo.position" content="49.0241;1.1508" />
+    <meta name="ICBM" content="49.0241, 1.1508" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Obtenir un Devis - SmartPlomb Clim" />
+    <meta property="og:description"
+        content="Remplissez notre formulaire pour recevoir rapidement une estimation pour vos travaux." />
+    <meta property="og:url" content="https://urgence-depannage-plomberie-ch.me/devis.html" />
+    <meta property="og:image"
+        content="https://lh3.googleusercontent.com/p/AF1QipPGe6f93jH6zbcN1VDluaLZW35lkc_IvmLKcKSS=s1360-w1360-h1020-rw" />
+
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome CDN -->
