--- a/magasin.html
+++ b/magasin.html
@@ -6,7 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-    <title>Magasin Stinc à Évreux | Solutions de Plomberie et Chauffage pour Professionnels</title>
+    <!-- SEO Meta Tags -->
+    <title>Magasin Pièces Détachées Plomberie Évreux | SmartPlomb Clim</title>
+    <meta name="description"
+        content="Visitez notre magasin à Évreux (27000). Vente de pièces détachées plomberie, chauffage et sanitaire. Conseils de pros pour vos travaux." />
+    <meta name="keywords"
+        content="magasin plomberie évreux, pièces détachées chaudière, boutique sanitaire, outillage plombier, 27000, smartplomb clim" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Geo & OG Tags -->
+    <meta name="geo.region" content="FR-27" />
+    <meta name="geo.placename" content="Évreux" />
+    <meta name="geo.position" content="49.0241;1.1508" />
+    <meta name="ICBM" content="49.0241, 1.1508" />
+
+    <meta property="og:type" content="business.business" />
+    <meta property="og:title" content="Magasin SmartPlomb Clim - Évreux" />
+    <meta property="og:description"
+        content="Miroir, Robinetterie, Pièces de rechange. Tout pour la plomberie dans notre magasin à Évreux." />
+    <meta property="og:url" content="https://urgence-depannage-plomberie-ch.me/magasin.html" />
+    <meta property="og:image"
+        content="https://lh3.googleusercontent.com/p/AF1QipOQMXfWoNUvOxnpBXAfEphQGfV1dfqjv2NrMaJW=s1360-w1360-h1020-rw" />
+
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome CDN -->
