--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
     }
     </script>
 
+    <!-- Bootstrap CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- FontAwesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Google Fonts -->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&family=Oswald:wght@500;700&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="style.css" />
     <style>
         /* Homepage Specific Enhancements */
