--- a/index.html
+++ b/index.html
@@ -314,15 +314,17 @@
 
                 <div class="container hero-content text-center">
                     <div class="hero-box slide-up">
-                        <div class="hero-bracket-text"
+                        <div id="dynamic-bracket" class="hero-bracket-text"
                             style="color:#FFD700; font-weight:bold; letter-spacing:4px; margin-bottom:20px; text-transform:uppercase;">
                             [ Service d'Urgence 24h/24 ]</div>
-                        <h1 class="hero-title-main">PLOMBERIE<br><span style="color:#FFD700;">CHAUFFAGE & CLIM</span>
+                        <h1 id="dynamic-title" class="hero-title-main">PLOMBERIE<br><span
+                                style="color:#FFD700;">CHAUFFAGE & CLIM</span>
                         </h1>
-                        <p class="hero-subtitle mb-5" style="font-size:1.3rem; opacity:0.9;">Installation, Dépannage et
+                        <p id="dynamic-subtitle" class="hero-subtitle mb-5" style="font-size:1.3rem; opacity:0.9;">
+                            Installation, Dépannage et
                             Maintenance pour Particuliers et Professionnels.</p>
                         <div class="hero-btns">
-                            <a href="contact.html"
+                            <a id="dynamic-cta" href="contact.html"
                                 class="btn btn-primary btn-lg rounded-0 px-5 py-3 btn-glow transition-link"
                                 style="background:#FFD700; color:black; border:none; font-weight:bold;">DEMANDER UN
                                 DEVIS</a>
