--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     <div class="octf-mainbar-row octf-row">
                         <div class="octf-col">
                             <div id="site-logo" class="site-logo">
-                                <a href="index.html" class="stinc-logo transition-link">
+                                <a href="/" class="stinc-logo transition-link">
                                     <span class="logo-text">SmartPlomb Clim</span>
                                     <span class="logo-sub">URGENCE DÉPANNAGE • PLOMBERIE • CHAUFFAGE</span>
                                 </a>
@@ -283,13 +283,12 @@
                         <div class="octf-col menu-col d-none d-lg-block">
                             <nav id="site-navigation" class="main-navigation">
                                 <ul class="menu">
-                                    <li class="current-menu-item"><a href="index.html"
-                                            class="transition-link">Accueil</a></li>
-                                    <li><a href="plomberie.html" class="transition-link">Plomberie</a></li>
-                                    <li><a href="chauffage.html" class="transition-link">Chauffage</a></li>
-                                    <li><a href="climatisation.html" class="transition-link">Climatisation</a></li>
-                                    <li><a href="devis.html" class="transition-link">Demande de devis</a></li>
-                                    <li><a href="depannage.html" class="transition-link nav-btn-urgent">Dépannage
+                                    <li class="current-menu-item"><a href="/" class="transition-link">Accueil</a></li>
+                                    <li><a href="plomberie" class="transition-link">Plomberie</a></li>
+                                    <li><a href="chauffage" class="transition-link">Chauffage</a></li>
+                                    <li><a href="climatisation" class="transition-link">Climatisation</a></li>
+                                    <li><a href="devis" class="transition-link">Demande de devis</a></li>
+                                    <li><a href="depannage" class="transition-link nav-btn-urgent">Dépannage
                                             urgent</a></li>
                                 </ul>
                             </nav>
@@ -324,11 +323,11 @@
                             Installation, Dépannage et
                             Maintenance pour Particuliers et Professionnels.</p>
                         <div class="hero-btns">
-                            <a id="dynamic-cta" href="contact.html"
+                            <a id="dynamic-cta" href="contact"
                                 class="btn btn-primary btn-lg rounded-0 px-5 py-3 btn-glow transition-link"
                                 style="background:#FFD700; color:black; border:none; font-weight:bold;">DEMANDER UN
                                 DEVIS</a>
-                            <a href="magasin.html"
+                            <a href="magasin"
                                 class="btn btn-outline-light btn-lg rounded-0 px-5 py-3 ms-3 transition-link"
                                 style="border-width:2px; font-weight:bold;">NOTRE MAGASIN</a>
                         </div>
@@ -345,7 +344,7 @@
                             <h3 class="mb-3">Plomberie</h3>
                             <p class="text-secondary">Installation sanitaire, recherche de fuite, dégorgement et
                                 réparation rapide.</p>
-                            <a href="plomberie.html" class="text-uppercase fw-bold text-success"
+                            <a href="plomberie" class="text-uppercase fw-bold text-success"
                                 style="font-size:12px; letter-spacing:1px;">Découvrir <i
                                     class="fas fa-arrow-right ms-1"></i></a>
                         </div>
@@ -356,7 +355,7 @@
                             <h3 class="mb-3">Chauffage</h3>
                             <p class="text-secondary">Entretien de chaudière, installation de radiateurs et optimisation
                                 énergétique.</p>
-                            <a href="chauffage.html" class="text-uppercase fw-bold text-success"
+                            <a href="chauffage" class="text-uppercase fw-bold text-success"
                                 style="font-size:12px; letter-spacing:1px;">Découvrir <i
                                     class="fas fa-arrow-right ms-1"></i></a>
                         </div>
@@ -367,7 +366,7 @@
                             <h3 class="mb-3">Climatisation</h3>
                             <p class="text-secondary">Installation de PAC air-air, split system et maintenance de vos
                                 climatisations.</p>
-                            <a href="climatisation.html" class="text-uppercase fw-bold text-success"
+                            <a href="climatisation" class="text-uppercase fw-bold text-success"
                                 style="font-size:12px; letter-spacing:1px;">Découvrir <i
                                     class="fas fa-arrow-right ms-1"></i></a>
                         </div>
@@ -429,7 +428,7 @@
                                 Notre priorité : réactivité, qualité de service et satisfaction client.
                             </p>
 
-                            <a href="contact.html" class="btn btn-dark rounded-0 px-4 py-3 transition-link"
+                            <a href="contact" class="btn btn-dark rounded-0 px-4 py-3 transition-link"
                                 style="background:#1a1a1a; letter-spacing:1px;">NOUS CONTACTER</a>
                         </div>
                     </div>
@@ -507,17 +506,17 @@
                                 <div class="row">
                                     <div class="col-6">
                                         <ul class="footer-list list-unstyled">
-                                            <li><a href="index.html" class="transition-link">Accueil</a></li>
-                                            <li><a href="magasin.html" class="transition-link">Magasin</a></li>
-                                            <li><a href="contact.html" class="transition-link">Contact</a></li>
+                                            <li><a href="/" class="transition-link">Accueil</a></li>
+                                            <li><a href="magasin" class="transition-link">Magasin</a></li>
+                                            <li><a href="contact" class="transition-link">Contact</a></li>
                                         </ul>
                                     </div>
                                     <div class="col-6">
                                         <ul class="footer-list list-unstyled">
-                                            <li><a href="plomberie.html" class="transition-link">Plomberie</a></li>
-                                            <li><a href="climatisation.html" class="transition-link">Climatisation</a>
+                                            <li><a href="plomberie" class="transition-link">Plomberie</a></li>
+                                            <li><a href="climatisation" class="transition-link">Climatisation</a>
                                             </li>
-                                            <li><a href="chauffage.html" class="transition-link">Chauffage</a></li>
+                                            <li><a href="chauffage" class="transition-link">Chauffage</a></li>
                                         </ul>
                                     </div>
                                 </div>
