--- a/chauffage.html
+++ b/chauffage.html
@@ -76,21 +76,21 @@
                 <div class="container octf-mainbar-container">
                     <div class="octf-mainbar-row octf-row">
                         <div class="octf-col">
-                            <div id="site-logo" class="site-logo"><a href="index.html"
-                                    class="stinc-logo transition-link"><span class="logo-text">SmartPlomb
+                            <div id="site-logo" class="site-logo"><a href="/" class="stinc-logo transition-link"><span
+                                        class="logo-text">SmartPlomb
                                         Clim</span><span class="logo-sub">URGENCE DÉPANNAGE • PLOMBERIE •
                                         CHAUFFAGE</span></a></div>
                         </div>
                         <div class="octf-col menu-col d-none d-lg-block">
                             <nav id="site-navigation" class="main-navigation">
                                 <ul class="menu">
-                                    <li><a href="index.html" class="transition-link">Accueil</a></li>
-                                    <li><a href="plomberie.html" class="transition-link">Plomberie</a></li>
-                                    <li class="current-menu-item"><a href="chauffage.html"
+                                    <li><a href="/" class="transition-link">Accueil</a></li>
+                                    <li><a href="plomberie" class="transition-link">Plomberie</a></li>
+                                    <li class="current-menu-item"><a href="chauffage"
                                             class="transition-link">Chauffage</a></li>
-                                    <li><a href="climatisation.html" class="transition-link">Climatisation</a></li>
-                                    <li><a href="devis.html" class="transition-link">Demande de devis</a></li>
-                                    <li><a href="depannage.html" class="transition-link nav-btn-urgent">Dépannage
+                                    <li><a href="climatisation" class="transition-link">Climatisation</a></li>
+                                    <li><a href="devis" class="transition-link">Demande de devis</a></li>
+                                    <li><a href="depannage" class="transition-link nav-btn-urgent">Dépannage
                                             urgent</a></li>
                                 </ul>
                             </nav>
@@ -110,7 +110,7 @@
                             CHAUFFAGE & ÉNERGIE</h1>
                         <ul id="breadcrumbs"
                             class="breadcrumbs none-style list-unstyled d-flex justify-content-center text-white opacity-75">
-                            <li class="me-2"><a href="index.html" class="text-white">Accueil</a></li>
+                            <li class="me-2"><a href="/" class="text-white">Accueil</a></li>
                             <li class="active">/ Chauffage</li>
                         </ul>
                     </div>
@@ -140,7 +140,7 @@
                             <li class="mb-3 border-bottom pb-2"><i class="fas fa-fire text-warning me-2"></i> Contrats
                                 d'entretien annuel</li>
                         </ul>
-                        <a href="contact.html" class="btn btn-primary mt-3 transition-link">Demander un Devis</a>
+                        <a href="contact" class="btn btn-primary mt-3 transition-link">Demander un Devis</a>
                     </div>
                 </div>
             </div>
@@ -190,17 +190,17 @@
                                 <div class="row">
                                     <div class="col-6">
                                         <ul class="footer-list list-unstyled">
-                                            <li><a href="index.html" class="transition-link">Accueil</a></li>
-                                            <li><a href="magasin.html" class="transition-link">Magasin</a></li>
-                                            <li><a href="contact.html" class="transition-link">Contact</a></li>
+                                            <li><a href="/" class="transition-link">Accueil</a></li>
+                                            <li><a href="magasin" class="transition-link">Magasin</a></li>
+                                            <li><a href="contact" class="transition-link">Contact</a></li>
                                         </ul>
                                     </div>
                                     <div class="col-6">
                                         <ul class="footer-list list-unstyled">
-                                            <li><a href="plomberie.html" class="transition-link">Plomberie</a></li>
-                                            <li><a href="climatisation.html" class="transition-link">Climatisation</a>
+                                            <li><a href="plomberie" class="transition-link">Plomberie</a></li>
+                                            <li><a href="climatisation" class="transition-link">Climatisation</a>
                                             </li>
-                                            <li><a href="chauffage.html" class="transition-link">Chauffage</a></li>
+                                            <li><a href="chauffage" class="transition-link">Chauffage</a></li>
                                         </ul>
                                     </div>
                                 </div>
