--- a/magasin.html
+++ b/magasin.html
@@ -98,8 +98,8 @@
                                     <li><a href="chauffage" class="transition-link">Chauffage</a></li>
                                     <li><a href="climatisation" class="transition-link">Climatisation</a></li>
                                     <li><a href="devis" class="transition-link">Demande de devis</a></li>
-                                    <li><a href="depannage" class="transition-link nav-btn-urgent">Dépannage
-                                            urgent</a></li>
+                                    <li><a href="depannage" class="transition-link nav-btn-urgent">Demande
+                                            d'intervention urgente</a></li>
                                 </ul>
                             </nav>
                         </div>
