--- a/contact.html
+++ b/contact.html
@@ -91,8 +91,8 @@
                                     <li><a href="climatisation" class="transition-link">Climatisation</a></li>
                                     <li class="current-menu-item"><a href="devis" class="transition-link">Demande
                                             de devis</a></li>
-                                    <li><a href="depannage" class="transition-link nav-btn-urgent">Dépannage
-                                            urgent</a></li>
+                                    <li><a href="depannage" class="transition-link nav-btn-urgent">Demande
+                                            d'intervention urgente</a></li>
                                 </ul>
                             </nav>
                         </div>
