--- a/depannage.html
+++ b/depannage.html
@@ -92,7 +92,8 @@
                                     <li><a href="climatisation" class="transition-link">Climatisation</a></li>
                                     <li><a href="devis" class="transition-link">Demande de devis</a></li>
                                     <li class="current-menu-item"><a href="depannage"
-                                            class="transition-link nav-btn-urgent">Dépannage urgent</a></li>
+                                            class="transition-link nav-btn-urgent">Demande d'intervention urgente</a>
+                                    </li>
                                 </ul>
                             </nav>
                         </div>
@@ -130,21 +131,21 @@
                             </p>
                         </div>
 
-                        <div class="row g-4 mb-5">
-                            <div class="col-md-6">
+                        <div class="row g-4">
+                            <!-- Left Column: Urgency Info -->
+                            <div class="col-lg-5">
                                 <div
-                                    class="bg-dark text-white p-5 text-center rounded border border-danger shadow-lg h-100 d-flex flex-col justify-content-center align-items-center">
-                                    <i class="fas fa-phone-volume mb-4 text-danger"
-                                        style="font-size:60px; animation: pulse-urgent 1.5s infinite;"></i>
+                                    class="bg-dark text-white p-5 text-center rounded border border-danger shadow-lg mb-4 d-flex flex-column justify-content-center align-items-center">
+                                    <i class="fas fa-phone-volume mb-4 text-danger pulse-urgent"
+                                        style="font-size:60px;"></i>
                                     <h3 class="text-white">APPELEZ-NOUS MAINTENANT</h3>
                                     <div class="fw-bold fs-1 text-warning mt-3"
                                         style="font-family:'Oswald', sans-serif;">02 32 28 41 69</div>
                                     <a href="tel:0232284169" class="btn btn-danger btn-lg mt-4 w-100 fw-bold">APPELER LE
                                         TECHNICIEN</a>
                                 </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="bg-light p-5 rounded h-100 border">
+
+                                <div class="bg-light p-5 rounded border">
                                     <h3 class="mb-4">Nos Tarifs Dépannage</h3>
                                     <ul class="list-unstyled lead">
                                         <li class="mb-3 d-flex justify-content-between border-bottom pb-2">
@@ -165,6 +166,66 @@
                                             *Majoration de 50% les soirs et week-ends.
                                         </li>
                                     </ul>
+                                </div>
+                            </div>
+
+                            <!-- Right Column: Intervention Form -->
+                            <div class="col-lg-7">
+                                <div class="intervention-form-card">
+                                    <h3>Demande d'Intervention</h3>
+                                    <p class="mb-4 text-secondary">Remplissez ce formulaire pour une intervention
+                                        rapide.
+                                        Nous vous recontacterons immédiatement.</p>
+
+                                    <form id="intervention-form">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <div class="form-group">
+                                                    <label class="form-label">Nom Complet</label>
+                                                    <input type="text" name="user_name" class="form-control-custom"
+                                                        placeholder="Ex: Jean Dupont" required>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div class="form-group">
+                                                    <label class="form-label">Téléphone</label>
+                                                    <input type="tel" name="user_phone" class="form-control-custom"
+                                                        placeholder="06 00 00 00 00" required>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label class="form-label">Adresse de l'intervention</label>
+                                            <input type="text" name="user_address" class="form-control-custom"
+                                                placeholder="Votre adresse à Évreux" required>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label class="form-label">Type de problème</label>
+                                            <select name="problem_type" class="form-control-custom" required>
+                                                <option value="" disabled selected>Sélectionnez un type</option>
+                                                <option value="Fuite d'eau">Fuite d'eau</option>
+                                                <option value="Canalisation bouchée">Canalisation bouchée</option>
+                                                <option value="Panne de chaudière">Panne de chaudière / Chauffage
+                                                </option>
+                                                <option value="Panne Climatisation">Panne Climatisation</option>
+                                                <option value="Autre">Autre</option>
+                                            </select>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label class="form-label">Description (Optionnel)</label>
+                                            <textarea name="message" class="form-control-custom"
+                                                placeholder="Décrivez brièvement le problème..."></textarea>
+                                        </div>
+
+                                        <button type="submit" class="btn-submit-intervention">
+                                            Envoyer la demande <i class="fas fa-paper-plane"></i>
+                                        </button>
+
+                                        <div id="form-feedback"></div>
+                                    </form>
                                 </div>
                             </div>
                         </div>
@@ -247,6 +308,7 @@
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 
