Activation réelle du formulaire

--- a/depannage.html
+++ b/depannage.html
@@ -177,7 +177,14 @@
                                         rapide.
                                         Nous vous recontacterons immédiatement.</p>
 
-                                    <form id="intervention-form">
+                                    <form id="intervention-form"
+                                        action="https://formsubmit.co/ajax/oumaymabramid@gmail.com" method="POST">
+                                        <!-- FormSubmit Configuration -->
+                                        <input type="hidden" name="_subject"
+                                            value="Nouvelle Demande d'Intervention - SmartPlomb Clim">
+                                        <input type="hidden" name="_template" value="table">
+                                        <input type="hidden" name="_captcha" value="true">
+
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <div class="form-group">
